--- a/app/globals.css
+++ b/app/globals.css
@@ -91,3 +91,11 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+.place-center {
+  @apply absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2;
+}
+
+.col-center {
+  @apply flex flex-col justify-center items-center;
+}
